{
  "version": 4,
  "terraform_version": "1.0.1",
  "serial": 44,
  "lineage": "7585c0c7-7f22-7f37-f690-622dfe42d3a5",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "10000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-06-28T10:22:25.680-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/himantej-development-test/global/firewalls/deephaven-test-fw-allow-http",
            "log_config": [],
            "name": "deephaven-test-fw-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/himantej-development-test/global/networks/deephaven-test-vpc",
            "priority": 1000,
            "project": "himantej-development-test",
            "self_link": "https://www.googleapis.com/compute/v1/projects/himantej-development-test/global/firewalls/deephaven-test-fw-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "deephaven"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "1000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-06-28T10:22:25.159-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/himantej-development-test/global/firewalls/deephaven-test-fw-allow-internal",
            "log_config": [],
            "name": "deephaven-test-fw-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/himantej-development-test/global/networks/deephaven-test-vpc",
            "priority": 1000,
            "project": "himantej-development-test",
            "self_link": "https://www.googleapis.com/compute/v1/projects/himantej-development-test/global/firewalls/deephaven-test-fw-allow-internal",
            "source_ranges": [
              "10.10.1.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-06-28T10:22:25.664-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/himantej-development-test/global/firewalls/deephaven-test-fw-allow-ssh",
            "log_config": [],
            "name": "deephaven-test-fw-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/himantej-development-test/global/networks/deephaven-test-vpc",
            "priority": 1000,
            "project": "himantej-development-test",
            "self_link": "https://www.googleapis.com/compute/v1/projects/himantej-development-test/global/firewalls/deephaven-test-fw-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/himantej-development-test/global/images/deephaven",
                    "size": 60,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/himantej-development-test/zones/us-central1-b/disks/deephaven"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/himantej-development-test/zones/us-central1-b/instances/deephaven",
            "instance_id": "1718828649285750503",
            "label_fingerprint": "0VnEwNsh07U=",
            "labels": {
              "authorization": "103900000016063005"
            },
            "machine_type": "n2-standard-8",
            "metadata": {
              "authorization": "103900000016063005"
            },
            "metadata_fingerprint": "8l7ISfACBTk=",
            "metadata_startup_script": "sudo touch /opt/startup.sh; sudo echo 'cd /opt; git clone https://git@github.com:deephaven/deephaven-core.git; cd deephaven-core; ./gradlew prepareCompose; docker-compose build; docker-compose -f /opt/deephaven-core/docker-compose.yml up' \u003e\u003e /opt/startup.sh; sudo chmod 755 /opt/startup.sh; bash /opt/startup.sh ",
            "name": "deephaven",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.135.101.104",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/himantej-development-test/global/networks/deephaven-test-vpc",
                "network_ip": "10.10.1.9",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/himantej-development-test/regions/us-central1/subnetworks/deephaven-test-public-subnet-1",
                "subnetwork_project": "himantej-development-test"
              }
            ],
            "project": "himantej-development-test",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/himantej-development-test/zones/us-central1-b/instances/deephaven",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "deephaven",
              "ssh"
            ],
            "tags_fingerprint": "DkRLALt-4Bw=",
            "zone": "us-central1-b"
          },
          "dependencies": [
            "data.google_compute_image.deephaven-image",
            "google_compute_network.vpc",
            "google_compute_subnetwork.public_subnet_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/himantej-development-test/global/networks/deephaven-test-vpc",
            "mtu": 0,
            "name": "deephaven-test-vpc",
            "project": "himantej-development-test",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/himantej-development-test/global/networks/deephaven-test-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-06-28T10:22:27.115-07:00",
            "gateway_address": "10.10.1.1",
            "id": "projects/himantej-development-test/regions/us-central1/subnetworks/deephaven-test-public-subnet-1",
            "ip_cidr_range": "10.10.1.0/24",
            "name": "deephaven-test-public-subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/himantej-development-test/global/networks/deephaven-test-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "himantej-development-test",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/himantej-development-test/regions/us-central1/subnetworks/deephaven-test-public-subnet-1"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}